--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Laboratorio</h1>
+    <ol>Lista de semana</ol>
+        <li><a href="semana_01.html">Semana 01</li>
+        <li>Semana 02</li>
+
 </body>
 </html>
