--- a/semana_01.html
+++ b/semana_01.html
@@ -6,10 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Laboratorio</h1>
-    <ol>Lista de semana</ol>
-        <li><a href="semana_01.html">Semana 01</li>
-        <li>Semana 02</li>
-
+    <h1>Semana 01</h1>
+    
 </body>
 </html>
